--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <p>Minecraft Choose your verson</p>
-<a href"1.3.html">minecraft 1.3 beta</a>
-<a href"1.5.2.html">minecraft 1.5.2 normal</a>
-<a href"1.8.html">minecraft 1.8 normal</a>
-<a href"1.8_shaders.html">minecraft 1.8 with extra graphics</a>
-<a href"1.8_international.html">minecraft 1.8 international</a>
+<p><a href"1.3.html">minecraft 1.3 beta</a></p>
+<p><a href"1.5.2.html">minecraft 1.5.2 normal</a></p>
+<p><a href"1.8.html">minecraft 1.8 normal</a></p>
+<p><a href"1.8_shaders.html">minecraft 1.8 with extra graphics</a></p>
+<p><a href"1.8_international.html">minecraft 1.8 international</a></p>
 
